Fix problems and prepare for Railway deployment